Remove scrollbar on search results

--- a/src/index.css
+++ b/src/index.css
@@ -78,4 +78,13 @@
     );
     background-size: 100% 3px;
   }
+
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
 }
