--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,8 @@
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
+    --brand: 179 35% 75%;
+    --brand-alt: 21 35% 75%;
   }
   .dark {
     --background: 0 0% 3.9%;
